--- a/Frontend/YemekWebUI/Views/Shared/Components/_ProfileRatedRecipesComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_ProfileRatedRecipesComponentPartial/Default.cshtml
@@ -1,6 +1,9 @@
 ﻿@model List<ResultRatedRecipeDto>
 <div class="recepie_area plus_padding">
-    <h1>Beğendiğim Tarifler </h1>
+    <h1 class="recepie_area plus_padding">Beğendiğim Tarifler </h1>
+    <br />
+    <br />
+    <br />
     <div class="container">
         <div class="row">
             @foreach (var item in Model)
