--- a/Frontend/YemekWebUI/Views/Shared/Components/_RecipeServiceComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_RecipeServiceComponentPartial/Default.cshtml
@@ -1,29 +1,34 @@
 ﻿<div class="dish_area">
     <div class="container">
-        <div class="row">
-            <div class="col-xl-12">
-                <div class="dish_wrap d-flex">
-                    <div class="single_dish text-center">
-                        <div class="thumb">
-                            <img src="~/tasty-recipes-master/img/recepie/recpie_4.png" alt="">
-                        </div>
-                        <h3>Tarif Ekleyebilirsiniz</h3>
-                        <p>Profilinize giderek oradan tarif oluştur butonu ile istediğiniz tarifi sitemize yükleyebilirsiniz.</p>
+        <div class="row justify-content-center">
+            <div class="col-xl-4 col-md-6">
+                <div class="single_dish text-center d-flex flex-column justify-content-between h-100">
+                    <div class="thumb">
+                        <img src="~/tasty-recipes-master/img/recepie/recpie_4.png" alt="" class="img-fluid">
                     </div>
-                    <div class="single_dish text-center">
-                        <div class="thumb">
-                            <img src="~/tasty-recipes-master/img/recepie/recpie_5.png" alt="">
-                        </div>
-                        <h3>Tarifleri Puanlayabilirsiniz</h3>
-                        <p>Tarifleri puanlayabilirsiniz. En yüksek puana sahip tarifler anasayfada gözükür.</p>
+                    <h3>Tarif Ekleyebilirsiniz</h3>
+                    <p class="mb-3">Profilinize giderek oradan tarif oluştur butonu ile istediğiniz tarifi sitemize yükleyebilirsiniz.</p>
+                    <a href="@Url.Action("AddRecipe", "Recipe")" class="line_btn btn btn-primary mt-auto">Tarif Ekle</a>
+                </div>
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <div class="single_dish text-center d-flex flex-column justify-content-between h-100">
+                    <div class="thumb">
+                        <img src="~/tasty-recipes-master/img/recepie/recpie_5.png" alt="" class="img-fluid">
                     </div>
-                    <div class="single_dish text-center">
-                        <div class="thumb">
-                            <img src="~/tasty-recipes-master/img/recepie/recpie_6.png" alt="">
-                        </div>
-                        <h3>Farklı Tarifleri Görebilirsiniz</h3>
-                        <p>Başkalarının oluşturduğu tarifleri çeşitli filtrelemelerle görebilirsiniz.</p>
+                    <h3>Tarifleri Puanlayabilirsiniz</h3>
+                    <p class="mb-3">Tarifleri puanlayabilirsiniz. En yüksek puana sahip tarifler anasayfada gözükür.</p>
+                    <a href="@Url.Action("Index", "Rate")" class="line_btn btn btn-primary mt-auto">Tarif Ekle</a>
+                </div>
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <div class="single_dish text-center d-flex flex-column justify-content-between h-100">
+                    <div class="thumb">
+                        <img src="~/tasty-recipes-master/img/recepie/recpie_6.png" alt="" class="img-fluid">
                     </div>
+                    <h3>Farklı Tarifleri Görebilirsiniz</h3>
+                    <p class="mb-3">Başkalarının oluşturduğu tarifleri çeşitli filtrelemelerle görebilirsiniz.</p>
+                    <a href="@Url.Action("Index", "Recipe")" class="line_btn btn btn-primary mt-auto">Tarifleri Gör</a>
                 </div>
             </div>
         </div>
