--- a/Frontend/YemekWebUI/Views/Profile/Index.cshtml
+++ b/Frontend/YemekWebUI/Views/Profile/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 @await Component.InvokeAsync("_ProfileInformationComponentPartial", new { id = Convert.ToInt32(ViewBag.userId) });
-@await Component.InvokeAsync("_ProfileOwnerRecipesComponentPartial", new { id = Convert.ToInt32(ViewBag.userId) });
+@await Component.InvokeAsync("_ProfileOwnerRecipesComponentPartial", new { id = Convert.ToInt32(ViewBag.userId),pageNumber=ViewBag.CurrentPage,pageSize=ViewBag.PageSize });
 @await Component.InvokeAsync("_ProfileRatedRecipesComponentPartial", new { id = Convert.ToInt32(ViewBag.userId) });
 
