--- a/Frontend/YemekWebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_AboutUsComponentPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResultAboutDto>
 
-<div class="bradcam_area bradcam_bg_1">
+@* <div class="bradcam_area bradcam_bg_1">
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
@@ -10,7 +10,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> *@
 
 @foreach(var item in Model)
 {
