--- a/Frontend/YemekWebUI/Views/Shared/Components/_AllRecipeComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_AllRecipeComponentPartial/Default.cshtml
@@ -1,26 +1,50 @@
 ﻿@model List<ResultAllRecipeDto>
 
 <div class="recepie_area plus_padding">
-    <div class="container">
+    <!-- Pagination Section -->
+    <nav class="d-flex justify-content-center">
+        <ul class="pagination">
+            <li class="page-item @(ViewBag.CurrentPage == 1 ? "disabled" : "")">
+                <a class="page-link" href="?pageNumber=@(ViewBag.CurrentPage - 1)&pageSize=@ViewBag.PageSize">Önceki</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?pageNumber=@ViewBag.CurrentPage&pageSize=@ViewBag.PageSize">@ViewBag.CurrentPage</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?pageNumber=@(ViewBag.CurrentPage + 1)&pageSize=@ViewBag.PageSize">Sonraki</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container mt-4">
         <div class="row">
             @foreach (var item in Model)
             {
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <img src="@item.RecipeImageUrl" alt="">
+                <div class="col-xl-4 col-lg-4 col-md-6 mb-4">
+                    <div class="single_recepie text-center p-3 border rounded">
+                        <!-- Recipe Thumbnail -->
+                        <div class="recepie_thumb mb-3">
+                            <img src="@item.RecipeImageUrl" alt="@item.Title" class="img-thumbnail" style="width: 100%; height: 200px; object-fit: cover;">
                         </div>
-                        <h3>@item.Title</h3>
-                        <h3>@item.RecipeId</h3>
-                        <p>
+
+                        <!-- Recipe Details -->
+                        <h3 class="text-truncate" title="@item.Title">@item.Title</h3>
+                        <p class="text-muted">
+                            @item.CategoryName
+                        </p>
+                        <p class="text-secondary">
                             @(
                                 item.Description.Length > 50
-                                ? item.Description.Substring(0, 50) + "..."
+                                ? item.Description.Substring(0, 20) + "..."
                                 : item.Description
                                 )
                         </p>
-                        <p>@item.Username</p>
-                        <a href=@Url.Action("Index", "RecipeDetail", new { recipeId= @item.RecipeId}) class="line_btn">Tarifin Tamamını Gör</a>
+                        <p class="text-info">
+                            <small>@item.Username</small>
+                        </p>
+
+                        <!-- View Recipe Button -->
+                        <a href="@Url.Action("Index", "RecipeDetail", new { recipeId = @item.RecipeId })" class="btn btn-primary btn-sm">Tarifin Tamamını Gör</a>
                     </div>
                 </div>
             }
