--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
@@ -17,6 +17,7 @@
                                     <li><a href="/Home/Index/">Ana Sayfa</a></li>
                                     <li><a href="/About/Index/">Hakkımızda</a></li>
                                     <li><a href="/Recipe/Index/">Tarifler</a></li>
+                                    <li><a href="/Recipe/AddRecipe/">Tarif Ekle</a></li>
                                     <li><a href="/Profile/Index/">Profilim</a></li>
                                     @* tag helper kullanarak yazabilirsin bu yönlendirme işlemlerini. *@
                                     @* <li>
@@ -38,13 +39,13 @@
                             </nav>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                    @* <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                         <div class="search_icon">
                             <a href="#">
                                 <i class="ti-search"></i>
                             </a>
                         </div>
-                    </div>
+                    </div> *@
                     <div class="col-12">
                         <div class="mobile_menu d-block d-lg-none"></div>
                     </div>
