--- a/Frontend/YemekWebUI/Views/Shared/Components/_ProfileOwnerRecipesComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_ProfileOwnerRecipesComponentPartial/Default.cshtml
@@ -1,24 +1,34 @@
 ﻿@model List<ResultRecipeProfileDto>
+
 <div class="recepie_area plus_padding">
-    <h1>Bana ait tarifler </h1>
-    <div class="container">
+    <h1 class="d-flex justify-content-center" >Bana Ait Tarifler</h1>
+    <br />
+    <br />
+    <br />
+
+    <div class="container mt-4">
         <div class="row">
             @foreach (var item in Model)
             {
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <img src="@item.RecipeImageUrl" alt="">
+                <div class="col-xl-4 col-lg-4 col-md-6 mb-4">
+                    <div class="single_recepie text-center p-3 border rounded">
+                        <!-- Recipe Thumbnail -->
+                        <div class="recepie_thumb mb-3">
+                            <img src="@item.RecipeImageUrl" alt="@item.Title" class="img-thumbnail" style="width: 100%; height: 200px; object-fit: cover;">
                         </div>
-                        <h3>@item.Title</h3>
-                        <p>
+
+                        <!-- Recipe Details -->
+                        <h3 class="text-truncate" title="@item.Title">@item.Title</h3>
+                        <p class="text-secondary">
                             @(
                                 item.Description.Length > 50
-                                ? item.Description.Substring(0, 50) + "..."
+                                ? item.Description.Substring(0, 20) + "..."
                                 : item.Description
                                 )
                         </p>
-                        <a href="#" class="line_btn">Tarifin Tamamını Gör</a>
+
+                        <!-- View Recipe Button -->
+                        <a href="#" class="btn btn-primary btn-sm">Tarifin Tamamını Gör</a>
                     </div>
                 </div>
             }
