--- a/Frontend/YemekWebUI/Views/Shared/Components/_RecipeAreaComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_RecipeAreaComponentPartial/Default.cshtml
@@ -4,13 +4,16 @@
 
 
     <div class="container">
-
+        <h1 class="d-flex justify-content-center">En beğenilen tariflerimiz</h1>
+        <br />
+        <br />
+        <br />
         <div class="row">
             @foreach (var item in Model)
             {
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
-                        <div class="KendimAyarladim">
+                        <div class="KendimAyarladim"> @*kare bir formatte getirtiyor*@
                             <img src="@item.RecipeImageUrl" alt="">
                         </div>
                         <h3>@item.Title</h3>
