Jquery Data Table Recipes için eklendi.

--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeadUILayoutComponentPartial/Default.cshtml
@@ -66,4 +66,7 @@
     <link rel="stylesheet" href="~/tasty-recipes-master/css/slicknav.css">
     <link rel="stylesheet" href="~/tasty-recipes-master/css/style.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css" />
 </head>
