--- a/Frontend/YemekWebUI/Views/Shared/Components/_ScriptsUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_ScriptsUILayoutComponentPartial/Default.cshtml
@@ -28,3 +28,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+<script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script> 
+
