Controllerlara Authorize eklendi

--- a/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_HeaderUILayoutComponentPartial/Default.cshtml
@@ -34,7 +34,7 @@
                                             <li><a href="elements.html">elements</a></li>
                                         </ul>
                                     </li> *@
-                                    <li><a href="contact.html">İletişim</a></li>
+                                    <li><a href="/Admin/AdminMain/Index">Admin Paneli</a></li>
                                 </ul>
                             </nav>
                         </div>
