--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -7,6 +7,11 @@
 @using YemekUygulamasıDto.LoginDtos
 @using YemekUygulamasıDto.RegisterDtos
 @using YemekUygulamasıDto.UserDtos
+@using YemekWebUI.TagHelpers
+@using YemekWebUI.HtmlHelpers
+
+@addTagHelper *, YemekWebUI
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @* custom bir taghelper yazınca buraya eklemem lazım yukarıdaki gibi.
  *@
