--- a/Frontend/YemekWebUI/Views/Shared/Components/_RecipeAreaComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_RecipeAreaComponentPartial/Default.cshtml
@@ -4,30 +4,9 @@
 
 
     <div class="container">
-        <h1 class="d-flex justify-content-center">En beğenilen tariflerimiz</h1>
-        <br />
-        <br />
-        <br />
+        
         <div class="row">
-            @foreach (var item in Model)
-            {
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="KendimAyarladim"> @*kare bir formatte getirtiyor*@
-                            <img src="@item.RecipeImageUrl" alt="">
-                        </div>
-                        <h3>@item.Title</h3>
-                        <p>
-                            @(
-                                item.Description.Length > 50
-                                ? item.Description.Substring(0, 50) + "..."
-                                : item.Description
-                                )
-                        </p>
-                        <a href=@Url.Action("Index", "RecipeDetail", new { recipeId= @item.RecipeId}) class="line_btn">Tarifin tam halini gör</a>
-                    </div>
-                </div>
-            }
+            <recipe-list recipes="@Model"></recipe-list>
         </div>
 
     </div>
