Projeyi publish alıyorum

--- a/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminFooterLayoutComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminFooterLayoutComponentPartial/Default.cshtml
@@ -17,11 +17,8 @@
         </nav>
         <div class="copyright">
             2024, made with <i class="fa fa-heart heart text-danger"></i> by
-            <a href="http://www.themekita.com">ThemeKita</a>
+            <a href="#">Mert Sayan, Nahit Furkan Öznamlı, Barış Köse</a>
         </div>
-        <div>
-            Distributed by
-            <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
-        </div>
+      
     </div>
 </footer>
