--- a/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
@@ -48,7 +48,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/Admin/Recipe/Index">
+                                    <a href="/Admin/Recipe/DataTableIndex">
                                         <span class="sub-item">Tarif İşlemleri</span>
                                     </a>
                                 </li>
