--- a/Frontend/YemekWebUI/Views/_ViewImports.cshtml
+++ b/Frontend/YemekWebUI/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using YemekUygulamasıDto.UserDtos
 @using YemekWebUI.TagHelpers
 @using YemekWebUI.HtmlHelpers
+@using YemekUygulamasıDto.RateDtos
 
 @addTagHelper *, YemekWebUI
 
