Veri tabanı bağlantısı gizlendi

--- a/Frontend/YemekWebUI/Views/Shared/Components/_RecipeServiceComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Views/Shared/Components/_RecipeServiceComponentPartial/Default.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <h3>Tarifleri Puanlayabilirsiniz</h3>
                     <p class="mb-3">Tarifleri puanlayabilirsiniz. En yüksek puana sahip tarifler anasayfada gözükür.</p>
-                    <a href="@Url.Action("Index", "Rate")" class="line_btn btn btn-primary mt-auto">Tarif Ekle</a>
+                    <a href="@Url.Action("Rate", "RecipeDetail")" class="line_btn btn btn-primary mt-auto">Tarif Ekle</a>
                 </div>
             </div>
             <div class="col-xl-4 col-md-6">
