--- a/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
+++ b/Frontend/YemekWebUI/Areas/Admin/Views/Shared/Components/_AdminSideBarComponentPartial/Default.cshtml
@@ -60,6 +60,28 @@
                                 
                             </ul>
                         </div>
+
+                        <a data-bs-toggle="collapse" href="#geri">
+                            <i class="fas fa-layer-group"></i>
+                            <p>Diğer İşlemler</p>
+                            <span class="caret"></span>
+                        </a>
+                        <div class="collapse" id="geri">
+                            <ul class="nav nav-collapse">
+                                
+                                <li>
+                                    <a href="/Login/Index">
+                                        <span class="sub-item">Çıkış Yap</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Home/Index">
+                                        <span class="sub-item">Anasayfaya Geri Dön</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </div>
                     </li>  
                 </ul>
             </div>
